--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"dependencies": {
 		"express":"2.5.8",
 		"mongoose":"2.5.10",
-		"jade":"0.21.0"
+		"jade":"0.21.0",
+		"passport":"0.1.7",
+		"passport-local":"0.1.2",
+		"sha1":"0.0.1"
 	}
 }
