--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"jade":"0.21.0",
 		"passport":"0.1.7",
 		"passport-local":"0.1.2",
-		"sha1":"0.0.1"
+		"sha1":"0.0.1",
+		"connect-mongodb":"1.1.3"
 	}
 }
