--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
 		"passport-local":"0.1.2",
 		"bcrypt":"0.5.0",
 		"connect-mongodb":"1.1.3"
+	},
+	"engines":{
+		"node":"0.6.x",
+		"npm":"1.1.x"
 	}
 }
