--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"bcrypt":"0.5.0",
 		"connect-mongodb":"1.1.3"
 	},
+	"devDependencies":{
+		"chai":"0.5.3",
+		"mocha":"1.0.3"
+	},
 	"engines":{
 		"node":"0.6.x",
 		"npm":"1.1.x"
