--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"passport":">=0.1.7",
 		"passport-local":">=0.1.2",
 		"bcrypt":">=0.5.0",
-		"connect-mongodb":">=1.1.3"
+		"connect-mongodb":">=1.1.3",
+    "connect-flash":""
 	},
 	"devDependencies":{
 		"chai":">=0.5.3",
